# speech2text

./: .gitignore  1_transcrever.py  CLAUDE.md  README.md  TODO.md  convert_to_text.py  converter_mp3.py  main.py  mp3_to_wav.py  pyproject.toml  record.py  requirements-dev.txt  requirements.py  requirements.txt  script.py  script_old.py  start.py  transcrever_wav.py
.github/workflows/: ci.yml
docs/: TODO.md  decisions.md
examples/: example_usage.py
files/: dicas_aos_20.md
src/: audio_converter.py  audio_recorder.py  logger.py  processor.py  transcriber.py
tests/: test_audio_converter.py  test_audio_recorder.py
